// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortTabs renders correctly 1`] = `
Object {
  "output": <Component
    style={
      Object {
        "backgroundColor": "#e8edf1",
        "flexDirection": "column",
        "paddingBottom": 1,
        "paddingTop": 1,
      }
    }
  >
    <WithHover
      additionalInfo={
        Object {
          "currency": "EUR",
          "duration": "3h 40m",
          "price": "290",
        }
      }
      icon="thumb-up"
      isActive={true}
      isFirst={true}
      isLast={false}
      label="Best"
      onPress={[MockFunction]}
      value="QUALITY"
    />
    <WithHover
      additionalInfo={
        Object {
          "currency": "EUR",
          "duration": "9h 25m",
          "price": "130",
        }
      }
      icon="money"
      isActive={false}
      isFirst={false}
      isLast={false}
      label="Cheapest"
      onPress={[MockFunction]}
      value="PRICE"
    />
    <WithHover
      additionalInfo={
        Object {
          "currency": "EUR",
          "duration": "1h 20min",
          "price": "386",
        }
      }
      icon="clock"
      isActive={false}
      isFirst={false}
      isLast={true}
      label="Fastest"
      onPress={[MockFunction]}
      value="DURATION"
    />
  </Component>,
}
`;

exports[`SortTabs renders correctly with no parameters 1`] = `
Object {
  "output": <Component
    style={
      Object {
        "backgroundColor": "#e8edf1",
        "flexDirection": "column",
        "paddingBottom": 1,
        "paddingTop": 1,
      }
    }
  >
    <WithHover
      icon="thumb-up"
      isActive={true}
      isFirst={true}
      isLast={false}
      label="Best"
      onPress={[MockFunction]}
      value="QUALITY"
    />
    <WithHover
      icon="money"
      isActive={false}
      isFirst={false}
      isLast={false}
      label="Cheapest"
      onPress={[MockFunction]}
      value="PRICE"
    />
    <WithHover
      icon="clock"
      isActive={false}
      isFirst={false}
      isLast={true}
      label="Fastest"
      onPress={[MockFunction]}
      value="DURATION"
    />
  </Component>,
}
`;
